@@ -5,6 +5,7 @@ Version 1.0
 -----------
 (first 1.0 release, release date to be announced)
 
+- improved func:`url_decode` and :func:`url_encode` performance.
 - fixed an issue where the SharedDataMiddleware could cause an
   internal server error on weird paths when loading via pkg_resources.
 - fixed an URL generation bug that caused URLs to be invalid if a
